# mcp-in-the-middle

./: .gitignore  CLAUDE.md  README.md  build_mcpb.py  pyproject.toml
src/badmcp/: __main__.py  launcher.js  server.py
src/mcp_in_the_middle/: __main__.py  launcher.js  server.py
tests/: dummy_server.py  test_shim.py
