[project]
name = "mcp-in-the-middle"
version = "0.1.0"
description = "MCP Machine-in-the-Middle proxy for security research"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.28.0",
]

[project.scripts]
mcp-in-the-middle = "mcp_in_the_middle.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
